# nur

./: .dockerignore  .gitmodules  COPYING  Cargo.toml  Dockerfile.alpine-aarch64  Dockerfile.alpine-x86_64  Dockerfile.ubuntu-aarch64  Dockerfile.ubuntu-x86_64  LICENSE.md  TODO  build.zig
.github/workflows/: build.yaml
src/: curl.zig  lmdb.zig  main.rs  main.zig  nur.rs  nur.zig  quickjs.zig
ts/: .gitignore  nur.d.ts  package.json  tsconfig.json
ts/src/: index.ts
